Use SequencedCollection.getFirst() / getLast() for sequenced access
Java 21+ `SequencedCollection` provides `getFirst()` / `getLast()`
for first / last element access. Replace `.get(0)` /
`.get(size() - 1)` across the project. Gson `JsonArray` is exempt -
it doesn't implement `SequencedCollection`.